2011-02-24  Per Bothner  <per@bothner.com>

	* standard/Scheme.java: Change s8vector, u8vector, s16vector, u16vector,
	s32vector, u32vector, s64vector, u64vector, f32vector, f44vector to
	refer to LangObjType instances, not constructor instances.

2011-02-10  Jamison Hope <jrh@theptrgroup.com>
	    Per Bothner  <per@bothner.com>

	* standard/IfFeature.java: New "java-6" feature.

2011-02-08  Jamison Hope <jrh@theptrgroup.com>

	* standard/require.java (featureMap): Add srfi-14.
	* standard/ImportFromLibrary.java (SRFI97Map):  Add srfi-14.

2011-02-06  Per Bothner  <per@bothner.com>

	* lang/Quote.java (expand_pair): If quoting EXP:NAME just quitely
	return the (non-standard) SEXPR-representation without complaining.

2011-02-05  Per Bothner  <per@bothner.com>

	* lang/Macro.java (hygienic): Replace boolean with ..
	(flag): new bit mask.
	(HYGIENIC): New constant.
	(SKIP_SCAN_FORM): New constant.
	(makeSkipScanForm): New factory method.
	(scanForm): Just call super, rather than expanding, if SKIP_SCAN_FORM.
	* standard/define_syntax.java (flags): New field.
	(define_rewrite_syntax): New static.
	* standard/Scheme.java (initScheme): Define define-rewrite-syntax.

	* standard/require.java (scanForDefinitions): Handle the case
	(require CNAME "FILE") where CNAME doesn't (yet) exist.  Before it
	would work only when using angle-bracket syntax, which forces a
	ClassType - but a plain CNAME doesn't.  So check for a null result
	from getTypeFor.

2011-01-27  Per Bothner  <per@bothner.com>

	* lang/Lambda.java: Update to use new Declaration.ValueSource methods.
	* standard/let.java: Likewise.
	* standard/define_alias.java: Likewise.
	* standard/object.java: Likewise.
	* standard/fluid_let.java: Likewise.
	* standard/set_b.java: Likewise.
	* standard/define.java: Likewise.  Some re-writing needed.

2011-01-24  Per Bothner  <per@bothner.com>

	* lang/Quote.java (expand_pair): Change handling of prefixed names
	with unknow prefix to also handle prefixes bound to classes.
